<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.characters.CharactersFragment">



    <HorizontalScrollView
        android:id="@+id/group_houses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_houses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:selectionRequired="false"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_griffindor"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gryffindor" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_slytherin"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/slytherin" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_hufflepuff"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/hufflepuff" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ravenclaw"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ravenclaw" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_houseless"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/houseless" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/characters_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_houses" />
</androidx.constraintlayout.widget.ConstraintLayout>